assets/css/style.css
body {
    font-family: 'Montserrat', sans-serif;
    background-color: #e7e0e0;
}

.hero-image {
    background-image: url("/assets/images/background.jpg");
    background-size: cover;
    min-height: 80vh;
    position: relative;
    background-attachment: fixed;
    background-repeat: no-repeat;
    background-position: center;
}

.hero-text {
    text-align: center;
    position: absolute;
    top: 50%;
    left: 50%;
    font-size: 130%;
    color: #fafafa;
    transform: translate(-50%, -50%);
}

.overlay {
    background-color: rgba(0, 0, 0, .2);
    top: 0;
    left: 0;
    width: 50%;
    height: 50%;
}

@media (max-width: 768px) {
    .background-image {
        min-height: 30vh;
    }
}

nav {
    color: #969b9e;
    padding-left: 10px;
}

footer {
    font-size: 2rem;
    background-color: #fafafa;
}

footer a {
    color:#969b9e;
    padding: 5px;
    margin: 5px;
}

